--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
     "expo": "~43.0.2",
+    "expo-constants": "~12.1.3",
     "expo-linear-gradient": "^10.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
@@ -24,7 +25,13 @@
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.16.5",
+    "@babel/eslint-parser": "^7.16.5",
+    "@react-native-community/eslint-config": "^3.0.1",
+    "eslint": "^8.5.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0"
   },
   "private": true
 }
